changed the file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
-        <h1>Some git test!</h1>
+        <h1>Some giy giy yig test!</h1>
         <p>some text</p>
+        
         </body>
     </html>
